--- a/GestionNote/GestionNote.csproj
+++ b/GestionNote/GestionNote.csproj
@@ -99,6 +99,10 @@
     <Compile Include="Migrations\201912181614038_addUsers.designer.cs">
       <DependentUpon>201912181614038_addUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202001211725117_addNotes.cs" />
+    <Compile Include="Migrations\202001211725117_addNotes.designer.cs">
+      <DependentUpon>202001211725117_addNotes.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\studentControl.xaml.cs">
       <DependentUpon>studentControl.xaml</DependentUpon>
     </Compile>
@@ -168,6 +172,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201912181614038_addUsers.resx">
       <DependentUpon>201912181614038_addUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202001211725117_addNotes.resx">
+      <DependentUpon>202001211725117_addNotes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
